RESOLVED FIXED128581
IDB: storage/indexeddb/mozilla/cursor-update-updates-indexes.html ASSERTs
https://bugs.webkit.org/show_bug.cgi?id=128581
Summary IDB: storage/indexeddb/mozilla/cursor-update-updates-indexes.html ASSERTs
Brady Eidson
Reported 2014-02-10 22:20:33 PST
IDB: storage/indexeddb/mozilla/cursor-update-updates-indexes.html ASSERTs Index gets don't return the key path, triggering this assert. Simple fix.
Attachments
Patch v1 (3.56 KB, patch)
2014-02-10 22:36 PST, Brady Eidson
ap: review+
Patch for landing (3.05 KB, patch)
2014-02-11 07:44 PST, Brady Eidson
no flags
Radar WebKit Bug Importer
Comment 1 2014-02-10 22:21:07 PST
Brady Eidson
Comment 2 2014-02-10 22:36:58 PST
Created attachment 223811 [details] Patch v1
Alexey Proskuryakov
Comment 3 2014-02-10 23:00:41 PST
Comment on attachment 223811 [details] Patch v1 View in context: https://bugs.webkit.org/attachment.cgi?id=223811&action=review > Source/WebKit2/DatabaseProcess/IndexedDB/UniqueIDBDatabase.cpp:936 > + // We must return it to know how to inject the result key into the result value object. s/it/a key path/
Brady Eidson
Comment 4 2014-02-11 07:44:16 PST
Created attachment 223862 [details] Patch for landing
WebKit Commit Bot
Comment 5 2014-02-11 08:22:45 PST
Comment on attachment 223862 [details] Patch for landing Clearing flags on attachment: 223862 Committed r163877: <http://trac.webkit.org/changeset/163877>
WebKit Commit Bot
Comment 6 2014-02-11 08:22:48 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.