IDB: storage/indexeddb/mozilla/cursor-update-updates-indexes.html ASSERTs <rdar://problem/16034112> and https://bugs.webkit.org/show_bug.cgi?id=128581

Reviewed by Alexey Proskuryakov.

Source/WebKit2:

* DatabaseProcess/IndexedDB/UniqueIDBDatabase.cpp:
(WebKit::UniqueIDBDatabase::getRecordFromBackingStore): Always store keyPath for Index get results.

LayoutTests:

* platform/mac-wk2/TestExpectations: Add the test to the enabled list.


Canonical link: https://commits.webkit.org/146628@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163877 268f45cc-cd09-0410-ab3c-d52691b4dbfc